updated footer and fixed some spacing

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,7 +1,6 @@
 .footer-link {
   text-decoration: none;
   font: inherit;
-
   font-size: 22px;
   cursor: pointer;
   border: 1px solid #bfc3c500;
@@ -19,7 +18,7 @@
   flex-direction: row;
   background-color: #474853;
   width: 100%;
-  max-height: 4rem;
+  max-height: 4.5rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   justify-content: space-between;
   align-items: center;
@@ -33,10 +32,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 auto;
   text-align: center;
-  padding: 0;
-  margin: 0;
 }
 
 .footer-box li {
@@ -45,8 +41,16 @@
 }
 
 .footer-box p {
-  margin: 0 1.5rem;
-  font-size: 22px;
+  margin-left: 1.5rem;
+  font-size: larger;
   font-weight: 500;
   color: white;
+}
+
+.footer-box a {
+  text-decoration: none;
+  color: white;
+  text-align: left;
+  padding: 0.3rem 1rem;
+  font-size: larger;
 }
