--- a/src/Components/UI/Main.module.css
+++ b/src/Components/UI/Main.module.css
@@ -1,4 +1,4 @@
 .main {
-  margin-top: 80px;
-  margin-bottom: 50px;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
 }
